Update website for Obfuscate

--- a/index.xhtml
+++ b/index.xhtml
@@ -66,7 +66,7 @@
 					<li><a title="Navarr" href="http://navarr.me/">Navarr Barnier</a></li>
 					<li><a title="drudge" href="http://penree.com/">Nicholas Penree</a></li>
 					<li><a title="Sorella" href="http://killdream.github.com/">Quildreen Motta</a></li>
-					<li><a title="Obfuscate" href="https://github.com/insidious">Robert Shinka</a></li>
+					<li><a title="Obfuscate" href="http://dev.unknownlayer.net/">Robert Shinka</a></li>
 					<li><a title="systemfault" href="http://debugfailure.wordpress.com/">Roger Cyr</a></li>
 					<li><a title="russfrank" href="https://github.com/russfrank">Russell Frank</a></li>
 					<li><a title="micrypt" href="http://micrypt.com/">Seyi Ogunyemi</a></li>
