--- a/index.xhtml
+++ b/index.xhtml
@@ -125,7 +125,13 @@
 		</div>
 	</div>
 	<footer>
-		<span>© 2012 The <span class="oftn">ΩF:∅</span> Foundation</span> | <span><a href="https://www.facebook.com/oftn.foundation" title="Like us!">Like us</a> on Facebook</span> | <span><a href="https://twitter.com/oftn_foundation" title="Follow us!">Follow us</a> on Twitter</span> | <span><a href="https://www.wepay.com/donate/oftn" title="Donate!">Donate</a> to the <span class="oftn">ΩF:∅</span> Foundation</span>
+		© 2012 The <span class="oftn">ΩF:∅</span> Foundation
+		<ul>
+			<li><a href="https://www.facebook.com/oftn.foundation">Like us</a> on Facebook</li>
+			<li><a href="https://twitter.com/oftn_foundation">Follow us</a> on Twitter</li>
+			<li><a href="https://plus.google.com/111688594845627806515" rel="publisher">Circle us</a> on Google+</li>
+			<li><a href="https://www.wepay.com/donate/oftn">Donate</a></li>
+		</ul>
 	</footer>
 </div>
 
