Add GitHub link to footer

--- a/index.xhtml
+++ b/index.xhtml
@@ -127,6 +127,7 @@
 	<footer>
 		© 2012 The <span class="oftn">ΩF:∅</span> Foundation
 		<ul>
+			<li><a href="https://github.com/oftn/">Watch us</a> on GitHub</li>
 			<li><a href="https://www.facebook.com/oftn.foundation">Like us</a> on Facebook</li>
 			<li><a href="https://twitter.com/oftn_foundation">Follow us</a> on Twitter</li>
 			<li><a href="https://plus.google.com/111688594845627806515" rel="publisher">Circle us</a> on Google+</li>
