New member: Nuck

--- a/index.xhtml
+++ b/index.xhtml
@@ -65,6 +65,7 @@
 					<li><a title="micahjohnston" href="https://github.com/micahjohnston">Micah Johnston</a></li>
 					<li><a title="Navarr" href="http://navarr.me/">Navarr Barnier</a></li>
 					<li><a title="drudge" href="http://penree.com/">Nicholas Penree</a></li>
+					<li><a title="Nuck" href="https://github.com/NuckChorris">Peter W. Lejeck</a></li>
 					<li><a title="Sorella" href="http://killdream.github.com/">Quildreen Motta</a></li>
 					<li><a title="Obfuscate" href="http://dev.unknownlayer.net/">Robert Shinka</a></li>
 					<li><a title="systemfault" href="http://debugfailure.wordpress.com/">Roger Cyr</a></li>
