Support hash change event for accordian

--- a/index.xhtml
+++ b/index.xhtml
@@ -15,7 +15,7 @@
 	</header>
 	<div id="contents">
 		<div id="overview" class="accordian">
-			<h2 title="What do we do?">About</h2>
+			<h2 id="about" title="What do we do?">About</h2>
 			<div class="accordian-panel">
 				<h3>Our Name</h3>
 				<p><span class="oftn">ΩF:∅</span> means "ohm-farad to none", and we usually pronounce it as "often".</p>
@@ -32,7 +32,7 @@
 					<li>Browse our <a href="https://groups.google.com/forum/#!forum/oftn">mailing list</a></li>
 				</ul>
 			</div>
-			<h2 title="Who are we?">People</h2>
+			<h2 id="people" title="Who are we?">People</h2>
 			<div class="accordian-panel">
 				<h3>Board of Directors</h3>
 				<ul>
@@ -76,7 +76,7 @@
 
 				<p>Email <a href="mailto:apply@oftn.org?subject=%CE%A9F%3A%E2%88%85%20Foundation%20Membership">apply@oftn.org</a> to apply for membership.</p>
 			</div>
-			<h2 title="What are we making?">Projects</h2>
+			<h2 id="projects" title="What are we making?">Projects</h2>
 			<div class="accordian-panel">
 				<p>We are committed to the open-source philosophy. This is why we manage <a href="https://github.com/oftn/">our open-source projects</a> with the wonderful <a href="https://github.com/">Github</a> service.</p>
 				<dl class="projects">
