Change Octayne to cmr

--- a/index.xhtml
+++ b/index.xhtml
@@ -51,7 +51,7 @@
 					<li><a title="sanitypassing" href="https://github.com/sanitypassing">Alex Schmidt</a></li>
 					<li><a title="prophile" href="https://github.com/prophile">Alistair Lynn</a></li>
 					<li><a title="oksushi" href="http://theworkingparty.com.au/">Cal Wilson</a></li>
-					<li><a title="Octayne" href="http://octayn.net/">Corey Richardson</a></li>
+					<li><a title="cmr" href="http://octayn.net/">Corey Richardson</a></li>
 					<li><a title="danpalmer" href="http://danpalmer.me/">Dan Palmer</a></li>
 					<li><a title="gf3" href="http://gf3.ca/">Gianni Chiappetta</a></li>
 					<li><a title="guidj0s" href="http://guipn.com/">Guilherme Nami</a></li>
