--- a/contrib/index.xhtml
+++ b/contrib/index.xhtml
@@ -2,12 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
 <head>
 <title>ΩF:∅ Leaderboard</title>
+<link href="../css/global.css" rel="stylesheet" type="text/css"/>
 <style type="text/css">
 body {
-	font-family: Arial, sans-serif;
-	background: #FFF none no-repeat fixed top left;
-	background-image: -webkit-gradient(linear, 100% 0%, 100% 100%, from(#EEE), color-stop(25%, #FFF), color-stop(75%, #FFF), to(#EEE));
-	background-image: -moz-linear-gradient(top, #EEE, #FFF, #FFF, #EEE);
+	overflow-y: auto;
+}
+h1 {
+	margin: 1em 0;
 }
 table {
 	text-align: left;
@@ -34,7 +35,7 @@ tr:nth-child(4) { background-color: #cfc; }
 </head>
 <body>
 <div id="container">
-	<h1>ΩF:∅ Leaderboard</h1>
+	<h1><span class="oftn">ΩF:∅</span> Leaderboard</h1>
 	<div id="loader">Loading...</div>
 </div>
 <script type="text/javascript" src="docont.js"></script>
