--- a/index.xhtml
+++ b/index.xhtml
@@ -36,42 +36,42 @@
 			<div class="accordian-panel">
 				<h3>Board of Directors</h3>
 				<ul>
-					<li><a title="cloudhead" href="http://cloudhead.io/">Alexis Sellier</a></li>
-					<li><a title="amcgregor" href="https://github.com/amcgregor">Alice Bevan–McGregor</a></li>
-					<li><a title="eboyjr" href="https://github.com/eboyjr">Devin Samarin</a></li>
-					<li><a title="devyn" href="http://github.com/devyn">Devyn Cairns</a></li>
-					<li><a title="sephr" href="http://eligrey.com/">Eli Grey</a></li>
-					<li><a title="gkatsev" href="http://gkatsev.com/">Gary Katsevman</a></li>
-					<li><a title="inimino" href="http://inimino.org/~inimino/blog/">Michaeljohn Clement</a></li>
-					<li><a title="yrashk" href="http://about.me/yrashk">Yurii Rashkovskii</a></li>
+					<li><a title="cloudhead" href="http://cloudhead.io/">Alexis Sellier</a> (cloudhead)</li>
+					<li><a title="amcgregor" href="https://github.com/amcgregor">Alice Bevan–McGregor</a> (amcgregor)</li>
+					<li><a title="eboyjr" href="https://github.com/eboyjr">Devin Samarin</a> (eboyjr)</li>
+					<li><a title="devyn" href="http://github.com/devyn">Devyn Cairns</a> (devyn)</li>
+					<li><a title="sephr" href="http://eligrey.com/">Eli Grey</a> (sephr)</li>
+					<li><a title="gkatsev" href="http://gkatsev.com/">Gary Katsevman</a> (gkatsev)</li>
+					<li><a title="inimino" href="http://inimino.org/~inimino/blog/">Michaeljohn Clement</a> (inimino)</li>
+					<li><a title="yrashk" href="http://about.me/yrashk">Yurii Rashkovskii</a> (yrashk)</li>
 				</ul>
 
 				<h3>Members</h3>
 				<ul>
-					<li><a title="sanitypassing" href="https://github.com/sanitypassing">Alex Schmidt</a></li>
-					<li><a title="prophile" href="https://github.com/prophile">Alistair Lynn</a></li>
-					<li><a title="oksushi" href="http://theworkingparty.com.au/">Cal Wilson</a></li>
-					<li><a title="cmr" href="http://octayn.net/">Corey Richardson</a></li>
-					<li><a title="danpalmer" href="http://danpalmer.me/">Dan Palmer</a></li>
-					<li><a title="gf3" href="http://gf3.ca/">Gianni Chiappetta</a></li>
-					<li><a title="guidj0s" href="http://guipn.com/">Guilherme Nami</a></li>
-					<li><a title="jeannicolas" href="https://github.com/SilverTab">Jean-Nicolas Jolivet</a></li>
-					<li><a title="otters" href="https://github.com/otter">Joel Taylor</a></li>
-					<li><a title="PragmaticCypher" href="https://github.com/PragmaticCypher">John Felderhof</a></li>
-					<li><a title="banister" href="http://banisterfiend.wordpress.com/">John Mair</a></li>
-					<li><a title="FireFly" href="http://www.firefly.nu/">Jonas Höglund</a></li>
-					<li><a title="mynyml" href="http://mynyml.com/">Martin Aumont</a></li>
-					<li><a title="matjas" href="http://mathiasbynens.be/">Mathias Bynens</a></li>
-					<li><a title="micahjohnston" href="https://github.com/micahjohnston">Micah Johnston</a></li>
-					<li><a title="Navarr" href="http://navarr.me/">Navarr Barnier</a></li>
-					<li><a title="drudge" href="http://penree.com/">Nicholas Penree</a></li>
-					<li><a title="Nuck" href="https://github.com/NuckChorris">Peter W. Lejeck</a></li>
-					<li><a title="Sorella" href="http://killdream.github.com/">Quildreen Motta</a></li>
-					<li><a title="Obfuscate" href="http://dev.unknownlayer.net/">Robert Shinka</a></li>
-					<li><a title="systemfault" href="http://debugfailure.wordpress.com/">Roger Cyr</a></li>
-					<li><a title="russfrank" href="https://github.com/russfrank">Russell Frank</a></li>
-					<li><a title="micrypt" href="http://micrypt.com/">Seyi Ogunyemi</a></li>
-					<li><a title="Nisstyre" href="http://infocalypse-net.info/blog/">Wesley Kerfoot</a></li>
+					<li><a title="sanitypassing" href="https://github.com/sanitypassing">Alex Schmidt</a> (sanitypassing)</li>
+					<li><a title="prophile" href="https://github.com/prophile">Alistair Lynn</a> (prophile)</li>
+					<li><a title="oksushi" href="http://theworkingparty.com.au/">Cal Wilson</a> (oksushi)</li>
+					<li><a title="cmr" href="http://octayn.net/">Corey Richardson</a> (cmr)</li>
+					<li><a title="danpalmer" href="http://danpalmer.me/">Dan Palmer</a> (danpalmer)</li>
+					<li><a title="gf3" href="http://gf3.ca/">Gianni Chiappetta</a> (gf3)</li>
+					<li><a title="guidj0s" href="http://guipn.com/">Guilherme Nami</a> (guidj0s)</li>
+					<li><a title="jeannicolas" href="https://github.com/SilverTab">Jean-Nicolas Jolivet</a> (jeannicolas)</li>
+					<li><a title="otters" href="https://github.com/otter">Joel Taylor</a> (otters)</li>
+					<li><a title="PragmaticCypher" href="https://github.com/PragmaticCypher">John Felderhof</a> (PragmaticCypher)</li>
+					<li><a title="banister" href="http://banisterfiend.wordpress.com/">John Mair</a> (banister)</li>
+					<li><a title="FireFly" href="http://www.firefly.nu/">Jonas Höglund</a> (FireFly)</li>
+					<li><a title="mynyml" href="http://mynyml.com/">Martin Aumont</a> (mynyml)</li>
+					<li><a title="matjas" href="http://mathiasbynens.be/">Mathias Bynens</a> (matjas)</li>
+					<li><a title="micahjohnston" href="https://github.com/micahjohnston">Micah Johnston</a> (micahjohnston)</li>
+					<li><a title="Navarr" href="http://navarr.me/">Navarr Barnier</a> (Navarr)</li>
+					<li><a title="drudge" href="http://penree.com/">Nicholas Penree</a> (drudge)</li>
+					<li><a title="Nuck" href="https://github.com/NuckChorris">Peter W. Lejeck</a> (Nuck)</li>
+					<li><a title="Sorella" href="http://killdream.github.com/">Quildreen Motta</a> (Sorella)</li>
+					<li><a title="Obfuscate" href="http://dev.unknownlayer.net/">Robert Shinka</a> (Obfuscate)</li>
+					<li><a title="systemfault" href="http://debugfailure.wordpress.com/">Roger Cyr</a> (systemfault)</li>
+					<li><a title="russfrank" href="https://github.com/russfrank">Russell Frank</a> (russfrank)</li>
+					<li><a title="micrypt" href="http://micrypt.com/">Seyi Ogunyemi</a> (micrypt)</li>
+					<li><a title="Nisstyre" href="http://infocalypse-net.info/blog/">Wesley Kerfoot</a> (Nisstyre)</li>
 				</ul>
 
 				<p>Email <a href="mailto:apply@oftn.org?subject=%CE%A9F%3A%E2%88%85%20Foundation%20Membership">apply@oftn.org</a> to apply for membership.</p>
