--- a/index.xhtml
+++ b/index.xhtml
@@ -72,6 +72,7 @@
 					<li><a title="russfrank" href="https://github.com/russfrank">Russell Frank</a> (russfrank)</li>
 					<li><a title="micrypt" href="http://micrypt.com/">Seyi Ogunyemi</a> (micrypt)</li>
 					<li><a title="Nisstyre" href="http://infocalypse-net.info/blog/">Wesley Kerfoot</a> (Nisstyre)</li>
+					<li><a title="Yorick" href="https://github.com/YorickvP">Yorick van Pelt</a> (Yorick)</li>
 				</ul>
 
 				<p>Email <a href="mailto:apply@oftn.org?subject=%CE%A9F%3A%E2%88%85%20Foundation%20Membership">apply@oftn.org</a> to apply for membership.</p>
