Updated new/index.xhtml to work with the new Github interface

--- a/new/index.xhtml
+++ b/new/index.xhtml
@@ -73,7 +73,7 @@
 
 		<ol class="do">
 			<li>Go to <a href="https://github.com/organizations/oftn/teams/30032">https://github.com/organizations/oftn/teams/30032</a> (The ΩF:∅ members team on Github). Scroll to the bottom and add <span class="flow data-github">their GitHub username</span>.</li>
-			<li>Go to <a href="https://github.com/oftn">https://github.com/oftn</a>, scroll down to their username, and click "Publicize membership".</li>
+			<li>Go to <a href="https://github.com/oftn?tab=members">https://github.com/oftn?tab=members</a>, scroll down to their username, and click "Publicize membership".</li>
 		</ol>
 
 		<h2>Drive</h2>
