Change website for Nisstyre

--- a/index.xhtml
+++ b/index.xhtml
@@ -71,7 +71,7 @@
 					<li><a title="systemfault" href="http://debugfailure.wordpress.com/">Roger Cyr</a> (systemfault)</li>
 					<li><a title="russfrank" href="https://github.com/russfrank">Russell Frank</a> (russfrank)</li>
 					<li><a title="micrypt" href="http://micrypt.com/">Seyi Ogunyemi</a> (micrypt)</li>
-					<li><a title="Nisstyre" href="http://infocalypse-net.info/blog/">Wesley Kerfoot</a> (Nisstyre)</li>
+					<li><a title="Nisstyre" href="http://stackoverflow.com/users/903589/wes">Wesley Kerfoot</a> (Nisstyre)</li>
 					<li><a title="Yorick" href="https://github.com/YorickvP">Yorick van Pelt</a> (Yorick)</li>
 				</ul>
 
