New member: guy

--- a/index.xhtml
+++ b/index.xhtml
@@ -53,6 +53,7 @@
 					<li><a title="oksushi" href="http://theworkingparty.com.au/">Cal Wilson</a> (oksushi)</li>
 					<li><a title="cmr" href="http://octayn.net/">Corey Richardson</a> (cmr)</li>
 					<li><a title="danpalmer" href="http://danpalmer.me/">Dan Palmer</a> (danpalmer)</li>
+					<li><a title="guy" href="http://anuary.com">Gajus Kuizinas</a> (guy)</li>
 					<li><a title="gf3" href="http://gf3.ca/">Gianni Chiappetta</a> (gf3)</li>
 					<li><a title="guidj0s" href="http://guipn.com/">Guilherme Nami</a> (guidj0s)</li>
 					<li><a title="jeannicolas" href="https://github.com/SilverTab">Jean-Nicolas Jolivet</a> (jeannicolas)</li>
