Welcome ljharb to ΩF:∅

--- a/index.xhtml
+++ b/index.xhtml
@@ -61,6 +61,7 @@
 					<li><a title="PragmaticCypher" href="https://github.com/PragmaticCypher">John Felderhof</a> (PragmaticCypher)</li>
 					<li><a title="banister" href="http://banisterfiend.wordpress.com/">John Mair</a> (banister)</li>
 					<li><a title="FireFly" href="http://www.firefly.nu/">Jonas Höglund</a> (FireFly)</li>
+					<li><a title="LJHarb" href="https://twitter.com/ljharb">Jordan Harband</a> (LJHarb)</li>
 					<li><a title="mynyml" href="http://mynyml.com/">Martin Aumont</a> (mynyml)</li>
 					<li><a title="matjas" href="http://mathiasbynens.be/">Mathias Bynens</a> (matjas)</li>
 					<li><a title="micahjohnston" href="https://github.com/micahjohnston">Micah Johnston</a> (micahjohnston)</li>
