Fix the mailing list because sephr did not say anything about that to eboy

--- a/new/index.xhtml
+++ b/new/index.xhtml
@@ -46,7 +46,7 @@
 		<div class="say">
 			<p>Hello, I am now going to go through the steps to add you as a member of ΩF:∅. It should take 5 minutes of your time.</p>
 			<p>I just need the following information from you in JSON format: {"name": "Full professional name", "nick": "Preferred nickname (like your IRC nick)", "github": "Github username", "url": "Website/blog URL" || false, "email": "E-mail address"}</p>
-			<p>Thanks. Please take the time to add #oftn to your autojoin list if you haven't done so. Also, please subscribe to the ΩF:∅ mailing list at https://groups.google.com/group/oftn</p>
+			<p>Thanks. Please take the time to add #oftn to your autojoin list if you haven't done so. Also, please subscribe to the ΩF:∅ mailing list at https://groups.google.com/group/oftn-wg</p>
 			<p>The first step is to add you to the ΩF:∅ Titanpad account (on http://oftn.titanpad.com/ ). We use this for collaborative real-time development. I'll send you an e-mail with your temporary password.</p>
 		</div>
 
