--- a/index.xhtml
+++ b/index.xhtml
@@ -2,26 +2,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US-x-Hixie">
 <head>
 <meta charset="utf-8"/>
-<meta name="description" content="The league of open-source software beaux esprits. The ΩF:∅ Foundation develops free and open-source software."/>
-<title>The ΩF:∅ Foundation</title>
+<meta name="description" content="The league of open-source technology beaux esprits. The ΩF:∅ Working Group develops free and open-source technology."/>
+<title>ΩF:∅ Working Group</title>
 <meta name="viewport" content="width=device-width"/>
 <link rel="stylesheet" type="text/css" href="css/global.css"/>
 </head>
 <body>
+<header>
+	<h1 class="logo"><span class="oftn-strong">ΩF:∅ Working Group</span></h1>
+	<p class="tagline">The league of open-source technology beaux esprits.</p>
+</header>
 <div id="container">
-	<header>
-		<h1 class="logo"><span class="oftn-strong">ΩF:∅</span></h1>
-		<p>The league of open-source software beaux esprits.</p>
-	</header>
 	<div id="contents">
 		<div id="overview" class="accordian">
-			<h2 id="about" title="What do we do?">About</h2>
+			<h2 id="about" title="What are we?">About</h2>
 			<div class="accordian-panel">
-				<h3>Our Name</h3>
-				<p><span class="oftn">ΩF:∅</span> means "ohm-farad to none", and we usually pronounce it as "often".</p>
-
-				<h3>Our Mission</h3>
-				<p>The mission of the <span class="oftn">ΩF:∅</span> Foundation is to bring people together to develop useful, high-quality, free, and open-source software for any range of purposes.</p>
+				<h3>What are we?</h3>
+				<p>The <span class="oftn">ΩF:∅</span> Working Group is an open source technology consortium that aims to bring people together to develop useful, high-quality, free, and open-source software and technology for any range of purposes.</p>
 
 				<h3>Our Focus</h3>
 				<p>Our members are familiar with languages as popular as Python, Ruby, JavaScript, and C, as well as Haskell, Erlang, and Lua. Some of our projects are heavily web-oriented, although we don't limit ourselves to that. We try to develop software in a wide range of languages with a wide range of uses.</p>
@@ -29,10 +26,13 @@
 				<h3>Contact Us</h3>
 				<ul>
 					<li>Visit us in <a href="ircs://irc.freenode.net/#oftn">#oftn</a> on the <a href="http://freenode.net/">Freenode IRC network</a></li>
-					<li>Browse our <a href="https://groups.google.com/forum/#!forum/oftn">mailing list</a></li>
+					<li>Browse our <a href="https://groups.google.com/forum/#!forum/oftn-wg">mailing list</a></li>
 				</ul>
+
+				<h3>Our Name</h3>
+				<p><span class="oftn">ΩF:∅</span> means "ohm-farad to none", and we usually pronounce it as "often".</p>
 			</div>
-			<h2 id="people" title="Who are we?">People</h2>
+			<h2 id="members" title="Who are we?">People</h2>
 			<div class="accordian-panel">
 				<h3>Board of Directors</h3>
 				<ul>
@@ -61,7 +61,6 @@
 					<li><a title="PragmaticCypher" href="https://github.com/PragmaticCypher">John Felderhof</a> (PragmaticCypher)</li>
 					<li><a title="banister" href="http://banisterfiend.wordpress.com/">John Mair</a> (banister)</li>
 					<li><a title="FireFly" href="http://www.firefly.nu/">Jonas Höglund</a> (FireFly)</li>
-					<li><a title="LJHarb" href="https://twitter.com/ljharb">Jordan Harband</a> (LJHarb)</li>
 					<li><a title="mynyml" href="http://mynyml.com/">Martin Aumont</a> (mynyml)</li>
 					<li><a title="matjas" href="http://mathiasbynens.be/">Mathias Bynens</a> (matjas)</li>
 					<li><a title="micahjohnston" href="https://github.com/micahjohnston">Micah Johnston</a> (micahjohnston)</li>
@@ -78,7 +77,7 @@
 					<li><a title="Yorick" href="https://github.com/YorickvP">Yorick van Pelt</a> (Yorick)</li>
 				</ul>
 
-				<p>Email <a href="mailto:apply@oftn.org?subject=%CE%A9F%3A%E2%88%85%20Foundation%20Membership">apply@oftn.org</a> to apply for membership.</p>
+				<p>Email <a href="mailto:wg@oftn.org?subject=%CE%A9F%3A%E2%88%85%20Working%20Group%20Membership%20Application">wg@oftn.org</a> to apply for membership.</p>
 			</div>
 			<h2 id="projects" title="What are we making?">Projects</h2>
 			<div class="accordian-panel">
@@ -129,10 +128,10 @@
 		</div>
 	</div>
 	<footer>
-		© 2012 The <span class="oftn">ΩF:∅</span> Foundation
+		© 2012 <span class="oftn">ΩF:∅</span> Working Group members
 		<ul>
 			<li><a href="https://github.com/oftn/">Watch us</a> on GitHub</li>
-			<li><a href="https://www.facebook.com/oftn.foundation">Like us</a> on Facebook</li>
+			<li><a href="https://www.facebook.com/oftn.wg">Like us</a> on Facebook</li>
 			<li><a href="https://twitter.com/oftn_foundation">Follow us</a> on Twitter</li>
 			<li><a href="https://plus.google.com/111688594845627806515" rel="publisher">Circle us</a> on Google+</li>
 			<li><a href="https://www.wepay.com/donate/oftn">Donate</a></li>
