Fix Twitter link

--- a/index.xhtml
+++ b/index.xhtml
@@ -132,7 +132,7 @@
 		<ul>
 			<li><a href="https://github.com/oftn/">Watch us</a> on GitHub</li>
 			<li><a href="https://www.facebook.com/oftn.wg">Like us</a> on Facebook</li>
-			<li><a href="https://twitter.com/oftn_foundation">Follow us</a> on Twitter</li>
+			<li><a href="https://twitter.com/oftn_wg">Follow us</a> on Twitter</li>
 			<li><a href="https://plus.google.com/111688594845627806515" rel="publisher">Circle us</a> on Google+</li>
 			<li><a href="https://www.wepay.com/donate/oftn">Donate</a></li>
 		</ul>
