Using irc: instead of ircs: due to lack of client support

--- a/index.xhtml
+++ b/index.xhtml
@@ -25,7 +25,7 @@
 
 				<h3>Contact Us</h3>
 				<ul>
-					<li>Visit us in <a href="ircs://irc.freenode.net/#oftn">#oftn</a> on the <a href="http://freenode.net/">Freenode IRC network</a></li>
+					<li>Visit us in <a href="irc://irc.freenode.net/#oftn">#oftn</a> on the <a href="http://freenode.net/">Freenode IRC network</a></li>
 					<li>Browse our <a href="https://groups.google.com/forum/#!forum/oftn-wg">mailing list</a></li>
 				</ul>
 
