Change "People" to "Members", remove "Working Group" from "ΩF:∅" header

--- a/index.xhtml
+++ b/index.xhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-	<h1 class="logo"><span class="oftn-strong">ΩF:∅ Working Group</span></h1>
+	<h1 class="logo"><span class="oftn-strong">ΩF:∅</span></h1>
 	<p class="tagline">The league of open-source technology beaux esprits.</p>
 </header>
 <div id="container">
@@ -32,7 +32,7 @@
 				<h3>Our Name</h3>
 				<p><span class="oftn">ΩF:∅</span> means "ohm-farad to none", and we usually pronounce it as "often".</p>
 			</div>
-			<h2 id="members" title="Who are we?">People</h2>
+			<h2 id="members" title="Who are we?">Members</h2>
 			<div class="accordian-panel">
 				<h3>Board of Directors</h3>
 				<ul>
