--- a/index.xhtml
+++ b/index.xhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-	<h1 class="logo"><span class="oftn-strong">ΩF:∅</span></h1>
+	<h1 class="logo"><span class="oftn-strong">ΩF:∅</span> Working Group</h1>
 	<p class="tagline">The league of open-source technology beaux esprits.</p>
 </header>
 <div id="container">
