--- a/index.xhtml
+++ b/index.xhtml
@@ -26,7 +26,7 @@
 				<h3>Contact Us</h3>
 				<ul>
 					<li>Visit us in <a href="irc://irc.freenode.net/#oftn">#oftn</a> on the <a href="http://freenode.net/">Freenode IRC network</a></li>
-					<li>Browse our <a href="https://groups.google.com/forum/#!forum/oftn-wg">mailing list</a></li>
+					<li>Join our <a href="https://plus.google.com/communities/112859235384765702467">Google+ community</a></li>
 				</ul>
 
 				<h3>Our Name</h3>
