Welcome ImBcmDth to the ΩF:∅ Working Group

--- a/index.xhtml
+++ b/index.xhtml
@@ -58,6 +58,7 @@
 					<li><a title="guidj0s" href="http://guipn.com/">Guilherme Nami</a> (guidj0s)</li>
 					<li><a title="jeannicolas" href="https://github.com/SilverTab">Jean-Nicolas Jolivet</a> (jeannicolas)</li>
 					<li><a title="otters" href="http://otte.rs/">Joel Taylor</a> (otters)</li>
+					<li><a title="ImBcmDth" href="http://jon-carlos.com/">Jon-Carlos Rivera</a> (ImBcmDth)</li>
 					<li><a title="PragmaticCypher" href="https://github.com/PragmaticCypher">John Felderhof</a> (PragmaticCypher)</li>
 					<li><a title="banister" href="http://banisterfiend.wordpress.com/">John Mair</a> (banister)</li>
 					<li><a title="FireFly" href="http://www.firefly.nu/">Jonas Höglund</a> (FireFly)</li>
