Updated tracking code

--- a/index.xhtml
+++ b/index.xhtml
@@ -141,7 +141,7 @@
 	</footer>
 </div>
 
-<script type="application/ecmascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"/>
+<script type="application/ecmascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"/>
 <script type="application/ecmascript" src="js/oftn/site.js"/>
 <script type="application/ecmascript" src="js/oftn/accordian.js"/>
 <script type="application/ecmascript">
@@ -149,5 +149,6 @@
 new ΩF_0.Accordian (document.getElementById ("overview"));
 ]]>
 </script>
+<script type="application/ecmascript" src="https://ssl.google-analytics.com/ga.js"/>
 </body>
 </html>
