Add prominent link to our GitHub page

--- a/index.xhtml
+++ b/index.xhtml
@@ -18,7 +18,7 @@
 			<h2 id="about" title="What are we?">About</h2>
 			<div class="accordian-panel">
 				<h3>What are we?</h3>
-				<p>The <span class="oftn">ΩF:∅</span> Working Group is an open source technology consortium that aims to bring people together to develop useful, high-quality, free, and open-source software and technology for any range of purposes.</p>
+				<p>The <a href="https://github.com/oftn/"><span class="oftn">ΩF:∅</span> Working Group</a> is an open source technology consortium that aims to bring people together to develop useful, high-quality, free, and open-source software and technology for any range of purposes.</p>
 
 				<h3>Our Focus</h3>
 				<p>Our members are familiar with languages as popular as Python, Ruby, JavaScript, and C, as well as Haskell, Erlang, and Lua. Some of our projects are heavily web-oriented, although we don't limit ourselves to that. We try to develop software in a wide range of languages with a wide range of uses.</p>
