Remove Working Group text from header due to font problem

--- a/index.xhtml
+++ b/index.xhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-	<h1 class="logo oftn-strong">ΩF:∅ <span class="oftn">Working Group</span></h1>
+	<h1 class="logo oftn-strong">ΩF:∅</h1>
 	<p class="tagline">The league of open-source technology beaux esprits.</p>
 </header>
 <div id="container">
