--- a/index.xhtml
+++ b/index.xhtml
@@ -86,14 +86,14 @@
 				<p>We are committed to the open-source philosophy. This is why we manage <a href="https://github.com/oftn/">our open-source projects</a> with the wonderful <a href="https://github.com/">Github</a> service.</p>
 				<dl class="projects">
 
-					<dt><a href="https://github.com/oftn/DartMark">DartMark</a></dt>
+					<dt><a href="https://github.com/oftn/core-estimator">Core Estimator</a></dt>
 					<dd>
-						<p>DartMark is an in-browser WYSIWYG editor with a focus on fast prototyping. The main benefits of it are speed, ease-of-use, and configurability. All actions can be performed with just a keyboard. Your editor is now your previewer, so there is no need to switch back and forth between a seperate editor and a browser to preview. And because it's written in-browser, DartMark will let you define your own keyboard shortcuts and special JavaScript function macros. Try out a <a href="projects/dartmark/">working version</a>.</p>
+						<p>Core Estimator is a JavaScript library for the browser which is designed to help find the optimum number of web workers to use in parallel by taking advantage of timing. View our <a href="projects/core-estimator/">live demo</a>.</p>
 					</dd>
 
-					<dt><a href="https://github.com/oftn/TPFS">TPFS</a></dt>
+					<dt><a href="https://github.com/oftn/oftn-bot">oftn-bot</a></dt>
 					<dd>
-						<p>TPFS (the Tagged Plain File System) is a revolutionary new file system that aims to move beyond the rut of hierarchical file systems through a purely tag based model. There are only two objects in TPFS: files and tags. They share a many-to-many relationship; files can have many different tags, and tags can have many different files. It is designed to be quick to look up in both directions.</p>
+						<p>State-of-the-art IRC bot library and bot for Node.js. Try oftn-bot in <a href="ircs://irc.freenode.net/#oftn">#oftn on irc.freenode.net</a>.</p>
 					</dd>
 
 					<dt><a href="https://github.com/oftn/lic">lic</a></dt>
@@ -106,14 +106,19 @@
 						<p>l10n.js is a JavaScript library that enables passive localization through native JavaScript methods, gracefully degrading if the library is not present. You can make Ajax applications, JavaScript libraries, etc. that can be localized but not require l10n.js to function. There is already a placeholder method for all API calls as specified in the ECMAScript specification and is present in all JavaScript engines, so when l10n.js isn't present, your application works fine. Visit the <a href="http://purl.eligrey.com/l10n.js/demo">online demo</a> to see l10n.js in action.</p>
 					</dd>
 
+					<dt><a href="https://github.com/oftn/DartMark">DartMark</a></dt>
+					<dd>
+						<p>DartMark is an in-browser WYSIWYG editor with a focus on fast prototyping. The main benefits of it are speed, ease-of-use, and configurability. All actions can be performed with just a keyboard. Your editor is now your previewer, so there is no need to switch back and forth between a seperate editor and a browser to preview. And because it's written in-browser, DartMark will let you define your own keyboard shortcuts and special JavaScript function macros. Try out a <a href="projects/dartmark/">working version</a>.</p>
+					</dd>
+
 					<dt><a href="https://github.com/oftn/suit-js">The SUIT Canvas Toolkit</a></dt>
 					<dd>
 						<p>The SUIT Canvas Toolkit is meant to be an easy-to-use, beautiful, and fully-featured UI toolkit for the HTML5 canvas. There are some specialized web applications that require more than just what can be achieved with normal DOM methods. With canvas, you get more flexibility in the design, look-and-feel, and controls. Rendering and page layout also works while hardly having to worry about how things will look and behave in another browser. Besides being useful to you, this was started as an experiment to see how UI toolkits can work in the browser environment. Visit the <a href="projects/suit/">demo page</a>.</p>
 					</dd>
 
-					<dt><a href="https://github.com/oftn/oftn-bot">oftn-bot</a></dt>
+					<dt><a href="https://github.com/oftn/TPFS">TPFS</a></dt>
 					<dd>
-						<p>State-of-the-art IRC bot library and bot for Node.js. Try oftn-bot in <a href="ircs://irc.freenode.net/#oftn">#oftn on irc.freenode.net</a>.</p>
+						<p>TPFS (the Tagged Plain File System) is a revolutionary new file system that aims to move beyond the rut of hierarchical file systems through a purely tag based model. There are only two objects in TPFS: files and tags. They share a many-to-many relationship; files can have many different tags, and tags can have many different files. It is designed to be quick to look up in both directions.</p>
 					</dd>
 				</dl>
 			</div>
