Format members list better

--- a/index.xhtml
+++ b/index.xhtml
@@ -35,7 +35,7 @@
 			<h2 id="members" title="Who are we?">Members</h2>
 			<div class="accordian-panel">
 				<h3>Board of Directors</h3>
-				<ul>
+				<ul class="members_list">
 					<li><a title="cloudhead" href="http://cloudhead.io/">Alexis Sellier</a> (cloudhead)</li>
 					<li><a title="amcgregor" href="https://github.com/amcgregor">Alice Bevan–McGregor</a> (amcgregor)</li>
 					<li><a title="eboyjr" href="https://github.com/eboyjr">Devin Samarin</a> (eboyjr)</li>
@@ -47,7 +47,7 @@
 				</ul>
 
 				<h3>Members</h3>
-				<ul>
+				<ul class="members_list">
 					<li><a title="sanitypassing" href="https://github.com/sanitypassing">Alex Schmidt</a> (sanitypassing)</li>
 					<li><a title="prophile" href="https://github.com/prophile">Alistair Lynn</a> (prophile)</li>
 					<li><a title="oksushi" href="http://theworkingparty.com.au/">Cal Wilson</a> (oksushi)</li>
