--- a/index.xhtml
+++ b/index.xhtml
@@ -57,7 +57,7 @@
 					<li><a title="gf3" href="http://gf3.ca/">Gianni Chiappetta</a> (gf3)</li>
 					<li><a title="guidj0s" href="http://guipn.com/">Guilherme Nami</a> (guidj0s)</li>
 					<li><a title="jeannicolas" href="https://github.com/SilverTab">Jean-Nicolas Jolivet</a> (jeannicolas)</li>
-					<li><a title="otters" href="http://otte.rs/">Joel Taylor</a> (otters)</li>
+					<li><a title="joelteon" href="http://joelt.io/">Joel Taylor</a> (jolteon)</li>
 					<li><a title="ImBcmDth" href="http://jon-carlos.com/">Jon-Carlos Rivera</a> (ImBcmDth)</li>
 					<li><a title="PragmaticCypher" href="https://github.com/PragmaticCypher">John Felderhof</a> (PragmaticCypher)</li>
 					<li><a title="banister" href="http://banisterfiend.wordpress.com/">John Mair</a> (banister)</li>
