Add gravar images to members list to spice things up a bit

--- a/new/index.xhtml
+++ b/new/index.xhtml
@@ -93,7 +93,10 @@
 		<ol class="do">
 			<li>
 				<p>Open up the website index.xhtml page to edit and add the person in alphabetical order by first name in the following form:</p>
-				<pre><code>&lt;li&gt;&lt;a title="<span class="flow data-nick">{nick}</span>" href="<span class="flow data-url">{url}</span>"&gt;<span class="flow data-name">{name}</span>&lt;/a&gt; (<span class="flow data-nick">{nick}</span>)&lt;/li&gt;</code></pre>
+				<pre><code>&lt;li class="<span class="flow data-nick">{nick}</span>"&gt;&lt;a title="<span class="flow data-nick">{nick}</span>" href="<span class="flow data-url">{url}</span>"&gt;<span class="flow data-name">{name}</span>&lt;/a&gt; (<span class="flow data-nick">{nick}</span>)&lt;/li&gt;</code></pre>
+			</li>
+			<li>
+				<p>Add user's gravar image to avatars.css</p>
 			</li>
 			<li>Push to oftn.org git repository</li>
 		</ol>
