--- a/index.xhtml
+++ b/index.xhtml
@@ -6,6 +6,7 @@
 <title>ΩF:∅ Working Group</title>
 <meta name="viewport" content="width=device-width"/>
 <link rel="stylesheet" type="text/css" href="css/global.css"/>
+<link rel="stylesheet" type="text/css" href="avatars.css"/>
 </head>
 <body>
 <header>
@@ -36,47 +37,47 @@
 			<div class="accordian-panel">
 				<h3>Board of Directors</h3>
 				<ul class="members_list">
-					<li><a title="cloudhead" href="http://cloudhead.io/">Alexis Sellier</a> (cloudhead)</li>
-					<li><a title="amcgregor" href="https://github.com/amcgregor">Alice Bevan–McGregor</a> (amcgregor)</li>
-					<li><a title="eboyjr" href="https://github.com/eboyjr">Devin Samarin</a> (eboyjr)</li>
-					<li><a title="devyn" href="http://github.com/devyn">Devyn Cairns</a> (devyn)</li>
-					<li><a title="sephr" href="http://eligrey.com/">Eli Grey</a> (sephr)</li>
-					<li><a title="gkatsev" href="http://gkatsev.com/">Gary Katsevman</a> (gkatsev)</li>
-					<li><a title="inimino" href="http://inimino.org/~inimino/blog/">Michaeljohn Clement</a> (inimino)</li>
-					<li><a title="yrashk" href="http://about.me/yrashk">Yurii Rashkovskii</a> (yrashk)</li>
+					<li class="cloudhead"><a title="cloudhead" href="http://cloudhead.io/">Alexis Sellier</a> (cloudhead)</li>
+					<li class="amcgregor"><a title="amcgregor" href="https://github.com/amcgregor">Alice Bevan–McGregor</a> (amcgregor)</li>
+					<li class="eboyjr"><a title="eboyjr" href="https://github.com/eboyjr">Devin Samarin</a> (eboyjr)</li>
+					<li class="devyn"><a title="devyn" href="http://github.com/devyn">Devyn Cairns</a> (devyn)</li>
+					<li class="sephr"><a title="sephr" href="http://eligrey.com/">Eli Grey</a> (sephr)</li>
+					<li class="gkatsev"><a title="gkatsev" href="http://gkatsev.com/">Gary Katsevman</a> (gkatsev)</li>
+					<li class="inimino"><a title="inimino" href="http://inimino.org/~inimino/blog/">Michaeljohn Clement</a> (inimino)</li>
+					<li class="yrashk"><a title="yrashk" href="http://about.me/yrashk">Yurii Rashkovskii</a> (yrashk)</li>
 				</ul>
 
 				<h3>Members</h3>
 				<ul class="members_list">
-					<li><a title="sanitypassing" href="https://github.com/sanitypassing">Alex Schmidt</a> (sanitypassing)</li>
-					<li><a title="prophile" href="https://github.com/prophile">Alistair Lynn</a> (prophile)</li>
-					<li><a title="oksushi" href="http://theworkingparty.com.au/">Cal Wilson</a> (oksushi)</li>
-					<li><a title="cmr" href="http://octayn.net/">Corey Richardson</a> (cmr)</li>
-					<li><a title="danpalmer" href="http://danpalmer.me/">Dan Palmer</a> (danpalmer)</li>
-					<li><a title="guy" href="http://anuary.com">Gajus Kuizinas</a> (guy)</li>
-					<li><a title="gf3" href="http://gf3.ca/">Gianni Chiappetta</a> (gf3)</li>
-					<li><a title="guidj0s" href="http://guipn.com/">Guilherme Nami</a> (guidj0s)</li>
-					<li><a title="jeannicolas" href="https://github.com/SilverTab">Jean-Nicolas Jolivet</a> (jeannicolas)</li>
-					<li><a title="joelteon" href="http://joelt.io/">Joel Taylor</a> (joelteon)</li>
-					<li><a title="ImBcmDth" href="http://jon-carlos.com/">Jon-Carlos Rivera</a> (ImBcmDth)</li>
-					<li><a title="PragmaticCypher" href="https://github.com/PragmaticCypher">John Felderhof</a> (PragmaticCypher)</li>
-					<li><a title="banister" href="http://banisterfiend.wordpress.com/">John Mair</a> (banister)</li>
-					<li><a title="FireFly" href="http://www.firefly.nu/">Jonas Höglund</a> (FireFly)</li>
-					<li><a title="LJHarb" href="https://twitter.com/ljharb">Jordan Harband</a> (LJHarb)</li>
-					<li><a title="mynyml" href="http://mynyml.com/">Martin Aumont</a> (mynyml)</li>
-					<li><a title="matjas" href="http://mathiasbynens.be/">Mathias Bynens</a> (matjas)</li>
-					<li><a title="micahjohnston" href="https://github.com/micahjohnston">Micah Johnston</a> (micahjohnston)</li>
-					<li><a title="Navarr" href="http://navarr.me/">Navarr Barnier</a> (Navarr)</li>
-					<li><a title="drudge" href="http://penree.com/">Nicholas Penree</a> (drudge)</li>
-					<li><a title="Nuck" href="https://github.com/NuckChorris">Peter W. Lejeck</a> (Nuck)</li>
-					<li><a title="Sorella" href="http://killdream.github.com/">Quildreen Motta</a> (Sorella)</li>
-					<li><a title="Obfuscate" href="http://dev.unknownlayer.net/">Robert Shinka</a> (Obfuscate)</li>
-					<li><a title="systemfault" href="http://debugfailure.wordpress.com/">Roger Cyr</a> (systemfault)</li>
-					<li><a title="russfrank" href="https://github.com/russfrank">Russell Frank</a> (russfrank)</li>
-					<li><a title="capisce" href="https://twitter.com/srodal">Samuel Rødal</a> (capisce)</li>
-					<li><a title="micrypt" href="http://micrypt.com/">Seyi Ogunyemi</a> (micrypt)</li>
-					<li><a title="Nisstyre" href="http://stackoverflow.com/users/903589/wes">Wesley Kerfoot</a> (Nisstyre)</li>
-					<li><a title="Yorick" href="https://github.com/YorickvP">Yorick van Pelt</a> (Yorick)</li>
+					<li class="sanitypassing"><a title="sanitypassing" href="https://github.com/sanitypassing">Alex Schmidt</a> (sanitypassing)</li>
+					<li class="prophile"><a title="prophile" href="https://github.com/prophile">Alistair Lynn</a> (prophile)</li>
+					<li class="oksushi"><a title="oksushi" href="http://theworkingparty.com.au/">Cal Wilson</a> (oksushi)</li>
+					<li class="cmr"><a title="cmr" href="http://octayn.net/">Corey Richardson</a> (cmr)</li>
+					<li class="danpalmer"><a title="danpalmer" href="http://danpalmer.me/">Dan Palmer</a> (danpalmer)</li>
+					<li class="guy"><a title="guy" href="http://anuary.com">Gajus Kuizinas</a> (guy)</li>
+					<li class="gf3"><a title="gf3" href="http://gf3.ca/">Gianni Chiappetta</a> (gf3)</li>
+					<li class="guidj0s"><a title="guidj0s" href="http://guipn.com/">Guilherme Nami</a> (guidj0s)</li>
+					<li class="jeannicolas"><a title="jeannicolas" href="https://github.com/SilverTab">Jean-Nicolas Jolivet</a> (jeannicolas)</li>
+					<li class="joelteon"><a title="joelteon" href="http://joelt.io/">Joel Taylor</a> (joelteon)</li>
+					<li class="ImBcmDth"><a title="ImBcmDth" href="http://jon-carlos.com/">Jon-Carlos Rivera</a> (ImBcmDth)</li>
+					<li class="PragmaticCypher"><a title="PragmaticCypher" href="https://github.com/PragmaticCypher">John Felderhof</a> (PragmaticCypher)</li>
+					<li class="banister"><a title="banister" href="http://banisterfiend.wordpress.com/">John Mair</a> (banister)</li>
+					<li class="FireFly"><a title="FireFly" href="http://www.firefly.nu/">Jonas Höglund</a> (FireFly)</li>
+					<li class="LJHarb"><a title="LJHarb" href="https://twitter.com/ljharb">Jordan Harband</a> (LJHarb)</li>
+					<li class="mynyml"><a title="mynyml" href="http://mynyml.com/">Martin Aumont</a> (mynyml)</li>
+					<li class="matjas"><a title="matjas" href="http://mathiasbynens.be/">Mathias Bynens</a> (matjas)</li>
+					<li class="micahjohnston"><a title="micahjohnston" href="https://github.com/micahjohnston">Micah Johnston</a> (micahjohnston)</li>
+					<li class="Navarr"><a title="Navarr" href="http://navarr.me/">Navarr Barnier</a> (Navarr)</li>
+					<li class="drudge"><a title="drudge" href="http://penree.com/">Nicholas Penree</a> (drudge)</li>
+					<li class="Nuck"><a title="Nuck" href="https://github.com/NuckChorris">Peter W. Lejeck</a> (Nuck)</li>
+					<li class="Sorella"><a title="Sorella" href="http://killdream.github.com/">Quildreen Motta</a> (Sorella)</li>
+					<li class="Obfuscate"><a title="Obfuscate" href="http://dev.unknownlayer.net/">Robert Shinka</a> (Obfuscate)</li>
+					<li class="systemfault"><a title="systemfault" href="http://debugfailure.wordpress.com/">Roger Cyr</a> (systemfault)</li>
+					<li class="russfrank"><a title="russfrank" href="https://github.com/russfrank">Russell Frank</a> (russfrank)</li>
+					<li class="capisce"><a title="capisce" href="https://twitter.com/srodal">Samuel Rødal</a> (capisce)</li>
+					<li class="micrypt"><a title="micrypt" href="http://micrypt.com/">Seyi Ogunyemi</a> (micrypt)</li>
+					<li class="Nisstyre"><a title="Nisstyre" href="http://stackoverflow.com/users/903589/wes">Wesley Kerfoot</a> (Nisstyre)</li>
+					<li class="Yorick"><a title="Yorick" href="https://github.com/YorickvP">Yorick van Pelt</a> (Yorick)</li>
 				</ul>
 
 				<p>Email <a href="mailto:wg@oftn.org?subject=%CE%A9F%3A%E2%88%85%20Working%20Group%20Membership%20Application">wg@oftn.org</a> to apply for membership.</p>
