--- a/index.xhtml
+++ b/index.xhtml
@@ -17,11 +17,11 @@ ga('send', 'pageview');
 </head>
 <body>
 <header>
-	<h1 class="logo oftn">ΩF:∅ Working Group</h1>
+	<h1 class="logo oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</h1>
 	<p class="tagline">The league of open-source technology beaux esprits.</p>
 	<div id="links">
 		<ul>
-			<li><a href="http://blog.wg.oftn.org"><span class="oftn">ΩF:∅</span> Working Group Blog</a></li>
+			<li><a href="http://blog.wg.oftn.org"><span class="oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</span> Blog</a></li>
 			<li><a href="https://github.com/oftn">Source Code</a></li>
 		</ul>
 	</div>
@@ -32,7 +32,7 @@ ga('send', 'pageview');
 			<div class="panel-inner">
 				<h2>About</h2>
 				<h3>What are we?</h3>
-				<p>The <a href="https://github.com/oftn/"><span class="oftn">ΩF:∅</span> Working Group</a> is an open source technology consortium that aims to bring people together to develop useful, high-quality, free, and open-source software and technology for any range of purposes.</p>
+				<p>The <a href="https://github.com/oftn/" class="oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</a> is an open source technology consortium that aims to bring people together to develop useful, high-quality, free, and open-source software and technology for any range of purposes.</p>
 
 				<h3>What&#8217;s our focus?</h3>
 				<p>Many of our members are focused on web technologies, but you find quite a wide range of software. Our members are familiar with languages as popular as JavaScript and C, as well as Haskell, Erlang, and Lua. Our software should exceed the quality of any open or commercial software around. Programming the best is a goal that can never be reached but we are closer each day.</p>
@@ -44,7 +44,7 @@ ga('send', 'pageview');
 				</ol>
 
 				<h3>Our name</h3>
-				<p><span class="oftn">ΩF:∅</span> is pronounced like the word <em>often</em>. However the meaning behind it is secret; if you&#8217;re smart you can figure it out.</p>
+				<p><span class="oftn-strong">ΩF:∅</span> is pronounced like the word <em>often</em>. However the meaning behind it is secret; if you&#8217;re smart you can figure it out.</p>
 			</div>
 		</div>
 		<div class="panel" id="projects">
@@ -147,7 +147,7 @@ ga('send', 'pageview');
 		</div>
 	</div>
 	<footer>
-		© 2013 <span class="oftn">ΩF:∅</span> Working Group members
+		© 2013 <span class="oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</span> members
 		<ul>
 			<li><a href="https://github.com/oftn/">Watch us</a> on GitHub</li>
 			<li><a href="https://www.facebook.com/oftn.wg">Like us</a> on Facebook</li>
