Using non-bold OFTN Aller for non-linked ΩF:∅s

--- a/index.xhtml
+++ b/index.xhtml
@@ -44,7 +44,7 @@ ga('send', 'pageview');
 				</ol>
 
 				<h3>Our name</h3>
-				<p><span class="oftn-strong">ΩF:∅</span> is pronounced like the word <em>often</em>. However the meaning behind it is secret; if you&#8217;re smart you can figure it out.</p>
+				<p><span class="oftn">ΩF:∅</span> is pronounced like the word <em>often</em>. However the meaning behind it is secret; if you&#8217;re smart you can figure it out.</p>
 			</div>
 		</div>
 		<div class="panel" id="projects">
@@ -147,7 +147,7 @@ ga('send', 'pageview');
 		</div>
 	</div>
 	<footer>
-		© 2013 <span class="oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</span> members
+		© 2013 <span class="oftn">ΩF:∅ Working Group</span> members
 		<ul>
 			<li><a href="https://github.com/oftn/">Watch us</a> on GitHub</li>
 			<li><a href="https://www.facebook.com/oftn.wg">Like us</a> on Facebook</li>
