Move inline scripts out of head to allow parallel fetching of resources; update description

--- a/index.xhtml
+++ b/index.xhtml
@@ -2,18 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US-x-Hixie">
 <head>
 <meta charset="utf-8"/>
-<meta name="description" content="The league of open-source technology beaux esprits. The ΩF:∅ Working Group develops free and open-source technology."/>
+<meta name="description" content="The ΩF:∅ Working Group is an open-source technology consortium that aims to develop useful, high-quality, free, and open-source software and technology for any range of purposes."/>
 <title>ΩF:∅ Working Group</title>
 <meta name="viewport" content="width=device-width"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 <link rel="stylesheet" type="text/css" href="css/global.css"/>
 <link rel="stylesheet" type="text/css" href="avatars.css"/>
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-20491376-1');
-ga('send', 'pageview');
-</script>
-
 </head>
 <body>
 <header>
@@ -32,7 +26,7 @@ ga('send', 'pageview');
 			<div class="panel-inner">
 				<h2>About</h2>
 				<h3>What are we?</h3>
-				<p>The <a href="https://github.com/oftn/" class="oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</a> is an open source technology consortium that aims to bring people together to develop useful, high-quality, free, and open-source software and technology for any range of purposes.</p>
+				<p>The <a href="https://github.com/oftn/" class="oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</a> is an open-source technology consortium that aims to develop useful, high-quality, free, and open-source software and technology for any range of purposes.</p>
 
 				<h3>What&#8217;s our focus?</h3>
 				<p>Many of our members are focused on web technologies, but you find quite a wide range of software. Our members are familiar with languages as popular as JavaScript and C, as well as Haskell, Erlang, and Lua. Our software should exceed the quality of any open or commercial software around. Programming the best is a goal that can never be reached but we are closer each day.</p>
@@ -157,7 +151,6 @@ ga('send', 'pageview');
 		</ul>
 	</footer>
 </div>
-
 <script type="application/ecmascript" src="js/oftn/site.js"/>
 </body>
 </html>
