--- a/index.xhtml
+++ b/index.xhtml
@@ -132,6 +132,7 @@
 					<li class="russfrank"><a title="russfrank" href="https://github.com/russfrank">Russell Frank</a> (russfrank)</li>
 					<li class="capisce"><a title="capisce" href="https://twitter.com/srodal">Samuel Rødal</a> (capisce)</li>
 					<li class="micrypt"><a title="micrypt" href="http://micrypt.com/">Seyi Ogunyemi</a> (micrypt)</li>
+					<li class="Kono"><a title="Kono" href="http://www.teamenso.com/">Tamir Atias</a> (Kono)</li>
 					<li class="Nisstyre"><a title="Nisstyre" href="http://stackoverflow.com/users/903589/wes">Wesley Kerfoot</a> (Nisstyre)</li>
 					<li class="Yorick"><a title="Yorick" href="https://github.com/YorickvP">Yorick van Pelt</a> (Yorick)</li>
 				</ul>
