sephr is now eligrey

--- a/index.xhtml
+++ b/index.xhtml
@@ -97,7 +97,7 @@
 					<li class="amcgregor"><a title="amcgregor" href="https://github.com/amcgregor">Alice Bevan–McGregor</a> (amcgregor)</li>
 					<li class="eboyjr"><a title="eboyjr" href="https://github.com/eboyjr">Devin Samarin</a> (eboyjr)</li>
 					<li class="devyn"><a title="devyn" href="http://github.com/devyn">Devyn Cairns</a> (devyn)</li>
-					<li class="sephr"><a title="sephr" href="http://eligrey.com/">Eli Grey</a> (sephr)</li>
+					<li class="eligrey"><a title="eligrey" href="http://eligrey.com/">Eli Grey</a> (eligrey)</li>
 					<li class="gkatsev"><a title="gkatsev" href="http://gkatsev.com/">Gary Katsevman</a> (gkatsev)</li>
 					<li class="inimino"><a title="inimino" href="http://inimino.org/~inimino/blog/">Michaeljohn Clement</a> (inimino)</li>
 					<li class="yrashk"><a title="yrashk" href="http://about.me/yrashk">Yurii Rashkovskii</a> (yrashk)</li>
