--- a/index.xhtml
+++ b/index.xhtml
@@ -26,19 +26,16 @@
 			<div class="panel-inner">
 				<h2>About</h2>
 				<h3>What are we?</h3>
-				<p>The <a href="https://github.com/oftn/" class="oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</a> is an open-source technology consortium that aims to develop useful, high-quality, free, and open-source software and technology for any range of purposes.</p>
+				<p>The <a href="https://github.com/oftn/" class="oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</a> is an open-source technology consortium that aims to develop useful, high-quality, free, and open-source software and technology to bring the future closer to home.</p>
 
 				<h3>What&#8217;s our focus?</h3>
-				<p>Many of our members are focused on web technologies, but you find quite a wide range of software. Our members are familiar with languages as popular as JavaScript and C, as well as Haskell, Erlang, and Lua. Our software should exceed the quality of any open or commercial software around. Programming the best is a goal that can never be reached but we are closer each day.</p>
-
-				<h3>Contact us</h3>
-				<ol>
-					<li>Visit us in <a href="irc://irc.freenode.net/#oftn">#oftn</a> on the <a href="http://freenode.net/">Freenode IRC network</a></li>
-					<li>Join our <a href="https://plus.google.com/communities/112859235384765702467">Google+ community</a></li>
-				</ol>
+				<p>Many of our members are focused on web technologies, but you find quite a wide range of software. Our members are familiar with languages as popular as JavaScript, Ruby, and C, as well as Haskell, Erlang, and Go. Our software should exceed the quality of any open or commercial software around. Programming the best is a goal that can never be reached but we are closer each day.</p>
 
 				<h3>Our name</h3>
-				<p><span class="oftn">ΩF:∅</span> is pronounced like the word <em>often</em>. However the meaning behind it is secret; if you&#8217;re smart you can figure it out.</p>
+				<p><span class="oftn">ΩF:∅</span> is pronounced like the word <em>often</em>. However, the meaning behind the characters is secret; if you&#8217;re smart you can figure it out.</p>
+
+				<h3>Visit us</h3>
+				<p>We're always chatting in <a href="irc://irc.freenode.net/#oftn">#oftn</a> on the <a href="http://freenode.net/">Freenode IRC network</a>, so feel free to stop by. Alternatively, you can join our <a href="https://plus.google.com/communities/112859235384765702467">Google+ community</a>.</p>
 			</div>
 		</div>
 		<div class="panel" id="projects">
