Update website for ~dsamarin

--- a/index.xhtml
+++ b/index.xhtml
@@ -92,7 +92,7 @@
 				<ul class="members_list">
 					<li class="cloudhead"><a title="cloudhead" href="http://cloudhead.io/">Alexis Sellier</a> (cloudhead)</li>
 					<li class="amcgregor"><a title="amcgregor" href="https://github.com/amcgregor">Alice Bevan–McGregor</a> (amcgregor)</li>
-					<li class="eboyjr"><a title="eboyjr" href="https://github.com/eboyjr">Devin Samarin</a> (dsamarin)</li>
+					<li class="dsamarin"><a title="dsamarin" href="https://github.com/dsamarin">Devin Samarin</a> (dsamarin)</li>
 					<li class="devyn"><a title="devyn" href="http://github.com/devyn">Devyn Cairns</a> (devyn)</li>
 					<li class="eligrey"><a title="eligrey" href="http://eligrey.com/">Eli Grey</a> (eligrey)</li>
 					<li class="gkatsev"><a title="gkatsev" href="http://gkatsev.com/">Gary Katsevman</a> (gkatsev)</li>
