Welcome cmars to the ΩF:∅ Working Group

--- a/index.xhtml
+++ b/index.xhtml
@@ -102,9 +102,9 @@
 
 				<h3>Members</h3>
 				<ul class="members_list">
-					<li class="sanitypassing"><a title="sanitypassing" href="https://github.com/sanitypassing">Alex Schmidt</a> (sanitypassing)</li>
 					<li class="prophile"><a title="prophile" href="https://github.com/prophile">Alistair Lynn</a> (prophile)</li>
 					<li class="oksushi"><a title="oksushi" href="http://theworkingparty.com.au/">Cal Wilson</a> (oksushi)</li>
+					<li class="cmars"><a title="cmars" href="https://github.com/cmars">Casey Marshall</a> (cmars)</li>
 					<li class="cmr"><a title="cmr" href="http://octayn.net/">Corey Richardson</a> (cmr)</li>
 					<li class="danpalmer"><a title="danpalmer" href="http://danpalmer.me/">Dan Palmer</a> (danpalmer)</li>
 					<li class="guy"><a title="guy" href="http://anuary.com">Gajus Kuizinas</a> (guy)</li>
@@ -113,7 +113,6 @@
 					<li class="jeannicolas"><a title="jeannicolas" href="https://github.com/SilverTab">Jean-Nicolas Jolivet</a> (jeannicolas)</li>
 					<li class="joelteon"><a title="joelteon" href="http://joelt.io/">Joel Taylor</a> (joelteon)</li>
 					<li class="ImBcmDth"><a title="ImBcmDth" href="http://jon-carlos.com/">Jon-Carlos Rivera</a> (ImBcmDth)</li>
-					<li class="PragmaticCypher"><a title="PragmaticCypher" href="https://github.com/PragmaticCypher">John Felderhof</a> (PragmaticCypher)</li>
 					<li class="banister"><a title="banister" href="http://banisterfiend.wordpress.com/">John Mair</a> (banister)</li>
 					<li class="FireFly"><a title="FireFly" href="http://www.firefly.nu/">Jonas Höglund</a> (FireFly)</li>
 					<li class="LJHarb"><a title="LJHarb" href="https://twitter.com/ljharb">Jordan Harband</a> (LJHarb)</li>
