Update new member setup script

--- a/new/index.xhtml
+++ b/new/index.xhtml
@@ -5,7 +5,7 @@
 <title>ΩF:∅ Member Initiation</title>
 <meta name="viewport" content="width=device-width"/>
 <style type="text/css">
-@import url(http://fonts.googleapis.com/css?family=Vollkorn:400italic,400|Raleway);
+@import url(//fonts.googleapis.com/css?family=Vollkorn:400italic,400|Raleway);
 
 /* OFTN Aller is a modified version of Aller with an empty set and a raised colon.
    Aller is copyright Dalton Maag Ltd, http://www.daltonmaag.com/ */
@@ -112,8 +112,9 @@ padding: 0.25em; background-color: #f3f3f3;
 		<div class="say">
 			<p>Hello, I am now going to go through the steps to add you as a member of <span class="oftn-strong">ΩF:∅</span>. It should take 5 minutes of your time.</p>
 			<p>I just need the following information from you in JSON format: {"name": "Full professional name", "nick": "Preferred nickname (like your IRC nick)", "github": "Github username", "url": "Website/blog URL" || false, "email": "E-mail address"}</p>
-			<p>Thanks. Please take the time to add #oftn to your autojoin list if you haven't done so. Also, please subscribe to the <span class="oftn-strong">ΩF:∅</span> mailing list at https://groups.google.com/group/oftn-wg</p>
-			<p>The first step is to add you to the <span class="oftn-strong">ΩF:∅</span> Titanpad account (on http://oftn.titanpad.com/ ). We use this for collaborative real-time development. I'll send you an e-mail with your temporary password.</p>
+			<p>Thanks. Please take the time to add #oftn to your autojoin list if you haven't done so. Also, please join our Google+ community for news, events, and general talk here at https://plus.google.com/communities/112859235384765702467</p>
+			<p>The first step is to add you to the <span class="oftn-strong">ΩF:∅</span> Github organization. Next I will add you to the shared <span class="oftn-strong">ΩF:∅</span> Google Drive folder. Lastly, I will request an IRC cloak for your account and add you to the website.</p>
+			
 		</div>
 
 		<div class="input">
@@ -122,7 +123,7 @@ padding: 0.25em; background-color: #f3f3f3;
 		</div>
 
 		<div class="steps">
-
+<!--
 		<h2>TitanPad</h2>
 
 		<ol class="do">
@@ -132,7 +133,7 @@ padding: 0.25em; background-color: #f3f3f3;
 			<li>Optionally change the temporary password</li>
 			<li>Click "Create Account"</li>
 		</ol>
-
+-->
 		<h2>GitHub</h2>
 
 		<ol class="do">
@@ -144,7 +145,7 @@ padding: 0.25em; background-color: #f3f3f3;
 
 		<ol class="do">
 			<li>Load <a href="https://drive.google.com/">Google Drive</a>.</li>
-			<li>Navigate to the <code>ΩF:∅ Foundation</code> folder, click the drop down arrow and select "Share...".</li>
+			<li>Navigate to the <code>ΩF:∅ Working Group</code> folder, click the drop down arrow and select "Share...".</li>
 			<li>
 				<p>Under "Add people:" paste in the following:</p>
 				<pre><code>"<span class="flow data-name">Full Name</span>" &lt;<span class="flow data-email">their+email@gmail.com</span>&gt;</code></pre>
